Fix overlap navbar #2

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,7 +25,7 @@ body {
 	position: fixed; /* Set the navbar to fixed position */
 	top: 0; /* Position the navbar at the top of the page */
 	width: 100%; /* Full width */
-	margin:top:149px
+	margin-bottom:149px
 }
 
 ul {
